# squashfs-rust

./: .gitignore  Cargo.toml  README.md
src/: decompress.rs  decompressors.rs  directory.rs  folder.rs  lib.rs  metadata.rs  squashfs.rs  superblock.rs  test.rs
src/compressors/: lz4.rs  mod.rs  passthrough.rs  xz_lzma.rs  zlib.rs  zstd.rs
src/inode/: mod.rs  types.rs
