[package]
name = "squashfs-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/squashfs.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.190", features = ["derive"] }
zstd = "0.13.0"
flate2 = "1.0.28"
rust-lzma = "0.6"
lz4 = "1.24.0"
num = "0.4.1"