[package]
name = "squashfs-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/squashfs.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
flate2 = "1.0.28"
rust-lzma = "0.6.0"
minilzo-rs = "0.6.0"
lz4 = "1.24.0"
zstd = "0.13.0"